styles/global.css
/*
@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
*/

html,
body {
  position: relative;
  width: 100vw;
  min-height: 100vh;
  padding: 0;
  margin: 0;
  overflow-x: hidden;
  color: #fff;
  background: #242424;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial,
    sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
  font-weight: 300;
  scroll-behavior: smooth;
  font-size: 16px;

  z-index: -1;
}

a {
  color: inherit;
  text-decoration: underline;
}
a:hover {
  text-decoration: underline 2px;
}

code {
  line-break: anywhere;
}
code.bg {
  line-break: auto;
  background: #484848;
  padding: 0.1rem;
  border-radius: 0.2rem;
}

.clickable {
  cursor: pointer;
}

::selection {
  background: #fff;
  color: #242424;
}

